fixed issue with margins on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -141,3 +141,6 @@
   background: rgba(255, 255, 255, 0.6);
   filter: blur(750px);
 }
+.text-white{
+  top: 0px;
+}
